--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,25 @@
 .about {
-  background-color: green;
+  background-color: white;
+  overflow: hidden;
+
+  h2 {
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  p {
+    margin: 20px;
+  }
+
+  .engineer {
+    padding-top: 90px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 0;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
