--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,3 +1,74 @@
+@import "../../global.scss";
+
 .projects {
-  background-color: crimson;
+  background-color: $lightGray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    margin-top: 40px;
+    padding-bottom: 10px;
+  }
+
+  p {
+    margin: 20px;
+    padding-bottom: 15px;
+  }
+
+  .container {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+    .card {
+      width: 220px;
+      height: 250px;
+      margin: 10px 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .card-overlay {
+        width: 220px;
+        height: 200px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        transition: all 0.5s ease;
+        cursor: pointer;
+
+        .card-thumbnail {
+          width: 100%;
+          height: 100%;
+
+          object-fit: cover;
+          z-index: 1;
+        }
+
+        &:not(.disable):hover {
+          background-color: black;
+          .card-thumbnail {
+            opacity: 0.2;
+            z-index: 0;
+          }
+        }
+
+        .project-status {
+          position: absolute;
+          font-size: 20px;
+          color: white;
+        }
+      }
+
+      .card-title {
+        margin-top: 2px;
+        margin-bottom: 8px;
+      }
+    }
+  }
 }
