--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -45,17 +45,10 @@
         .card-thumbnail {
           width: 100%;
           height: 100%;
+          cursor: pointer;
 
           object-fit: cover;
           z-index: 1;
-        }
-
-        &:not(.disable):hover {
-          background-color: black;
-          .card-thumbnail {
-            opacity: 0.2;
-            z-index: 0;
-          }
         }
 
         .project-status {
@@ -63,11 +56,24 @@
           font-size: 20px;
           color: white;
         }
-      }
 
-      .card-title {
-        margin-top: 2px;
-        margin-bottom: 8px;
+        .card-title {
+          margin-top: 2px;
+          margin-bottom: 8px;
+        }
+
+        &.active {
+          &:hover {
+            background-color: black;
+            .card-thumbnail {
+              opacity: 0.2;
+              z-index: 0;
+              &.no-click {
+                pointer-events: none;
+              }
+            }
+          }
+        }
       }
     }
   }
