--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -17,11 +17,12 @@
   }
 
   .container {
-    width: 70%;
+    width: 67%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    overflow: hidden;
 
     .card {
       width: 220px;
