--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,54 @@
+@import "../../global.scss";
+
 .contact {
-  background-color: yellow;
+  background-color: $lightGray;
+
+  //background-color: $lightGray;
+  display: grid;
+  grid: auto-flow min-content / 1fr;
+  grid-template-areas:
+    "h2             "
+    "content-wrapper";
+
+  grid-gap: 1em;
+  justify-content: center;
+
+  h2 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    width: 90%;
+  }
+
+  .contact-detail {
+    width: 90%;
+    display: grid;
+    grid: auto-flow min-content / 1fr;
+    grid-template-areas:
+      "p        "
+      "container";
+    margin-left: auto;
+    margin-right: auto;
+
+    p {
+      margin-top: 0;
+      margin-bottom: 20px;
+      margin-left: 0;
+      padding-bottom: 15px;
+    }
+    .contact-list {
+      padding-left: 0;
+      .contact-item {
+        margin-bottom: 5px;
+        span {
+          margin-left: 8px;
+        }
+      }
+    }
+  }
+
+  .void-space-before-footer {
+    height: 280px;
+  }
 }
