1. Add clickable logo in menu bar 2. Replace React favicon with Dakouri's

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -30,6 +30,12 @@
           font-size: 11px;
           line-height: 13px;
           font-weight: 400;
+          span {
+            img {
+              width: 28px;
+              height: 28px;
+            }
+          }
         }
       }
     }
